--- a/lib/applicationinsights.json
+++ b/lib/applicationinsights.json
@@ -1,7 +1,7 @@
 {
-  "connectionString": "${file:/mnt/secrets/rpe/app-insights-connection-string}",
+  "connectionString": "${file:/mnt/secrets/fact/app-insights-connection-string}",
   "role": {
-    "name": "rpe-demo"
+    "name": "fact-data-api"
   },
   "sampling": {
     "overrides": [
