--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,14 @@ dependencies {
   implementation group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  functionalTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.6'
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+
+  smokeTestImplementation sourceSets.integrationTest.runtimeClasspath
+
+  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.6'
+  functionalTestImplementation sourceSets.smokeTest.runtimeClasspath
 }
 
 bootJar {
