--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,7 @@ dependencies {
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
   implementation group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
   implementation group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.19.0'
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
