--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,11 @@ plugins {
   id 'org.springframework.boot' version '3.5.5'
   id 'com.github.ben-manes.versions' version '0.52.0'
   id 'org.sonarqube' version '6.3.1.5724'
-  /*
-    Applies analysis tools including checkstyle and OWASP Dependency checker.
-    See https://github.com/hmcts/gradle-java-plugin
- */
   id 'uk.gov.hmcts.java' version '0.12.67'
 }
 
 application {
-  mainClass = 'uk.gov.hmcts.reform.demo.Application'
+  mainClass = 'uk.gov.hmcts.reform.fact.data.api.Application'
   group = 'uk.gov.hmcts.reform'
   version = '0.0.1'
 }
@@ -102,8 +98,8 @@ tasks.check.dependsOn(integration)
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: spring-boot-template"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:spring-boot-template"
+    property "sonar.projectName", "fact-data-api"
+    property "sonar.projectKey", "uk.gov.hmcts.reform:fact-data-api"
   }
 }
 
@@ -148,17 +144,26 @@ dependencies {
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
 
+  //TODO: This may not be needed
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
   implementation group: 'ch.qos.logback', name: 'logback-classic', version: logbackVersion
   implementation group: 'ch.qos.logback', name: 'logback-core', version: logbackVersion
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.19.0'
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.6'
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+
+  smokeTestImplementation sourceSets.integrationTest.runtimeClasspath
+
+  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.6'
+  functionalTestImplementation sourceSets.smokeTest.runtimeClasspath
 }
 
 bootJar {
-  archiveFileName = "spring-boot-template.jar"
+  archiveFileName = "fact-data-api.jar"
 
   manifest {
     attributes('Implementation-Version': project.version.toString())
