--- a/charts/fact-data-api/Chart.yaml
+++ b/charts/fact-data-api/Chart.yaml
@@ -3,10 +3,10 @@ appVersion: "1.0"
 description: A Helm chart for fact-data-api App
 name: fact-data-api
 home: https://github.com/hmcts/fact-data-api
-version: 0.0.17
+version: 0.0.18
 maintainers:
   - name: HMCTS fact team
 dependencies:
   - name: java
     version: 5.3.1
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    repository: 'oci://hmctspublic.azurecr.io/helm'
