Added connection to kv

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,7 +22,7 @@ springdoc:
 
 spring:
   config:
-    import: "optional:configtree:/mnt/secrets/fact/"
+    import: "optional:configtree:/mnt/secrets/fact-kv/"
   application:
     name: FaCT Data API
 #  datasource:
