--- a/charts/fact-data-api/values.yaml
+++ b/charts/fact-data-api/values.yaml
@@ -1,6 +1,6 @@
 java:
   applicationPort: 8989
-  image: "hmctspublic.azurecr.io/fact/data-api:latest"
+  image: 'hmctspublic.azurecr.io/fact/data-api:latest'
   ingressHost: fact-data-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
   aadIdentityName: fact
   keyVaults:
