--- a/build.gradle
+++ b/build.gradle
@@ -84,10 +84,6 @@ tasks.register('smoke', Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
-jacoco {
-  toolVersion = "0.8.13"
-}
-
 jacocoTestReport {
   executionData(test, integration)
   reports {
@@ -103,6 +99,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "fact-data-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:fact-data-api"
+    property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
