--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ sonarqube {
   properties {
     property "sonar.projectName", "fact-data-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:fact-data-api"
+    property "sonar.coverage.jacoco.xmlReportPaths", jacocoTestReport.reports.xml.outputLocation.get().asFile.absolutePath
   }
 }
 
