--- a/build.gradle
+++ b/build.gradle
@@ -84,21 +84,22 @@ tasks.register('smoke', Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
-jacocoTestReport {
-  executionData(test, integration)
+tasks.named('jacocoTestReport') {
+  dependsOn tasks.named('test'), tasks.named('integration')
+  classDirectories.setFrom(fileTree(dir: "$buildDir/classes/java/main", include: ["**/*.class"]))
+  executionData(fileTree(dir: "$buildDir/jacoco", include: ["*.exec"]))
   reports {
     xml.required.set(true)
     csv.required.set(false)
-    xml.outputLocation.set(file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml"))
+    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/jacoco.xml"))
   }
 }
-
-project.tasks['sonarqube'].dependsOn jacocoTestReport
-
+tasks.named('sonarqube') { dependsOn tasks.named('jacocoTestReport') }
 sonarqube {
   properties {
     property "sonar.projectName", "fact-data-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:fact-data-api"
+    property "sonar.coverage.jacoco.xmlReportPaths", "$buildDir/reports/jacoco/jacoco.xml"
   }
 }
 
