--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.flywaydb.gradle.task.FlywayMigrateTask
+
 plugins {
   id 'application'
   id 'jacoco'
@@ -7,6 +9,7 @@ plugins {
   id 'org.sonarqube' version '6.3.1.5724'
   id 'uk.gov.hmcts.java' version '0.12.67'
   id 'io.freefair.lombok' version '9.0.0'
+  id 'org.flywaydb.flyway' version '11.13.2'
 }
 
 application {
@@ -43,6 +46,21 @@ configurations {
 
   integrationTestImplementation.extendsFrom testImplementation
   integrationTestRuntimeOnly.extendsFrom runtimeOnly
+}
+
+flyway {
+  url = System.getenv('FLYWAY_URL')
+  user = System.getenv('FLYWAY_USER')
+  password = System.getenv('FLYWAY_PASSWORD')
+  baselineOnMigrate = true
+  baselineVersion = '000'
+}
+
+tasks.register('migratePostgresDatabase', FlywayMigrateTask) {
+  baselineOnMigrate = true
+  if (project.hasProperty("dburl")) {
+    url = "jdbc:postgresql://${dburl}"
+  }
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -144,9 +162,8 @@ dependencies {
 
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.8'
 
-
-
-
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.13.2'
+  implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.13.2'
 
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
