--- a/charts/fact-data-api/values.yaml
+++ b/charts/fact-data-api/values.yaml
@@ -9,3 +9,4 @@ java:
         - name: app-insights-connection-string
           alias: app-insights-connection-string
   environment:
+    RUN_DB_MIGRATION_ON_STARTUP: false
