--- a/charts/fact-data-api/values.preview.template.yaml
+++ b/charts/fact-data-api/values.preview.template.yaml
@@ -6,7 +6,7 @@ java:
     DB_HOST: "{{ .Release.Name }}-postgresql"
     DB_NAME: "{{ .Values.postgresql.auth.database}}"
     DB_USER: "{{ .Values.postgresql.auth.username}}"
-    DB_PASS: "{{ .Values.postgresql.auth.password}}"
+    DB_PASSWORD: "{{ .Values.postgresql.auth.password}}"
     DB_PORT: "5432"
   postgresql:
     enabled: true
