FACT-2483 database setup (#23)
* Added local db and updated readme

* db setup and lombok

* Lombok config file

* Flyway setup

* Added flyway scripts

* Bumping chart version/ fixing aliases

* Added a note

* Update values.yaml with kv DB setup

* Update preview/aat charts

* Added test containers

* Change default

* Set default smoke

* Pipeline migration

* Change sample smoke and functional to hit real app

* Update int test yaml

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,26 @@
+# Note to security: This is not used in any environment, only locally for development purposes.
 services:
   fact-data-api:
-    build:
-      context: .
-      args:
-        - http_proxy
-        - https_proxy
-        - no_proxy
-    image: hmctspublic.azurecr.io/fact/data-api:latest
-    environment:
-      - ROOT_APPENDER
-      - JSON_CONSOLE_PRETTY_PRINT
-      - ROOT_LOGGING_LEVEL
-      - REFORM_SERVICE_TYPE
-      - REFORM_SERVICE_NAME
-      - REFORM_TEAM
-      - REFORM_ENVIRONMENT
-      - LOGBACK_DATE_FORMAT
-      - LOGBACK_REQUIRE_THREAD
-      - LOGBACK_REQUIRE_ALERT_LEVEL=false
-      - LOGBACK_REQUIRE_ERROR_CODE=false
+    build: .
     ports:
       - "8989:8989"
+    depends_on:
+      - fact-database
+    environment:
+      - DB_HOST=fact-database
+      - DB_PORT=5432
+      - DB_NAME=fact
+      - DB_USER=fact
+      - DB_PASSWORD=fact
+  fact-database:
+    image: hmctspublic.azurecr.io/imported/postgres:16-alpine
+    environment:
+      POSTGRES_DB: fact
+      POSTGRES_USER: fact
+      POSTGRES_PASSWORD: fact
+    ports:
+      - "5999:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+volumes:
+  db-data:
