Added flyway specific for pipeline

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
 import org.flywaydb.gradle.task.FlywayMigrateTask
 
+//This is required as flyway now has a stand alone library for each database rather than being bundled together
+buildscript {
+  dependencies {
+    classpath("org.flywaydb:flyway-database-postgresql:11.13.2")
+  }
+}
+
 plugins {
   id 'application'
   id 'jacoco'
