--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,6 @@ repositories {
 ext {
   log4JVersion = "2.25.2"
   logbackVersion = "1.5.19"
-  restAssuredVersion = "5.5.6"
 }
 
 ext['snakeyaml.version'] = '2.0'
@@ -189,7 +188,7 @@ dependencies {
 
   integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.3'
 
-  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: restAssuredVersion
+  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.6'
 }
 
 bootJar {
