FACT-2492 -  setup additional entities (v2) (#37)
* FACT-2492 - Add remaining entities and repositories

* FACT-2492 - code formatting tweaks

* FACT-2492 - added abstract code for enum->string data conversion

* FACT-2492 - Added concrete enum->string converters

* FACT-2492 - Fixed CourtOpeningTimeRepository to user the correct entity

* FACT-2492 - Update enum handling to use converter implementation

* FACT-2492 - Sonar recommended formatting updates

* FACT-2492 - normalise blank handling for validation constants

* FACT-2492 - add explicit column details for address lines

The inference mechanism by default doesn't work when a number is present at the end of the column name, so addressLine1 maps to column "address_line1" by default, whereas our column is named "address_line_1"

* FACT-2492 - made postcode column of court_postcodes table mandatory

* FACT-2492 - Add explicit blank handling for some email/phone number fields

* FACT-2492 - Add simple create and list endpoints for all entities

* FACT-2492 - Add base JPA entities to limit code duplication

* FACT-2492 - Reduced base hierarchy complexity and renamed parents

* FACT-2492 - Add @Repository to repos to clearly document spring wiring

* FACT-2492 - Reverted to atomic entity definitions

* FACT-2492 - privatised constructors and added builders to all entities

* FACT-2492 - added sonar exclusion for the duplicate checks on entities

* FACT-2492 - add the correct path match for the entities package

* FACT-2492 - normalilse database values with enums and remove converters

---------

Co-authored-by: hurricanepilot <jonathan.coomber@justice.gov.uk>
Co-authored-by: josh-uk <joshua.blackmoor@justice.gov.uk>

--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,9 @@ sonarqube {
   properties {
     property "sonar.projectName", "fact-data-api"
     property "sonar.projectKey", "uk.gov.hmcts.reform:fact-data-api"
+    // entities are atomic in the repo and necessarily have some duplication that
+    // we need to ignore.
+    property "sonar.cpd.exclusions", "**/entities/*.java"
   }
 }
 
@@ -172,6 +175,7 @@ dependencies {
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.13.2'
   implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.13.2'
 
+  implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-63', version: '3.10.3'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
   //TODO: This may not be needed
@@ -215,5 +219,5 @@ rootProject.tasks.named("processFunctionalTestResources") {
 }
 
 wrapper {
-    distributionType = Wrapper.DistributionType.ALL
+  distributionType = Wrapper.DistributionType.ALL
 }
