--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,15 +53,19 @@ spring:
   # regardless of their null/empty state
   jackson:
     default-property-inclusion: always
+  cloud:
+    azure:
+      profile:
+        tenant-id: ${AZURE_TENANT_ID}
+      credential:
+        managed-identity-enabled: ${AZURE_MANAGED_IDENTITY_ENABLED:false}
+        client-id: ${AZURE_CLIENT_ID}
+      storage:
+        account-name: ${AZURE_STORAGE_ACCOUNT_NAME}
+        blob:
+          container-name: photos
+          connection-string: ${AZURE_STORAGE_CONNECTION_STRING}
+
 
 dbMigration:
   runOnStartup: ${RUN_DB_MIGRATION_ON_STARTUP:true}
-
-azure:
-  blob:
-    tenant-id: ${TENANT_ID}
-    connection-string: ${CONNECTION_STRING}
-    storage-account-name: ${STORAGE_ACCOUNT_NAME}
-    container-name: photos
-  managed-identity:
-    client-id: ${MANAGED_IDENTITY_CLIENT_ID}
