FACT-2466 clean up and added more tests

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -68,6 +68,10 @@ spring:
   servlet:
     multipart:
       max-file-size: 2MB
+  data:
+    web:
+      pageable:
+        serialization-mode: via_dto
 
 dbMigration:
   runOnStartup: ${RUN_DB_MIGRATION_ON_STARTUP:true}
