--- a/build.gradle
+++ b/build.gradle
@@ -168,6 +168,13 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
 
+  // poc updates
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+  implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter', version: '6.0.0'
+  // end of poc updates
+
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.13'
 
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.8'
