--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,13 +65,18 @@ spring:
       # required for security flows
       active-directory:
         enabled: true
+
         profile:
           tenant-id: ${AZURE_TENANT_ID}
         # required as this will be what's in the "aud" claim for Jwt tokens
         # received by the controllers - the actual audience will be valid
         # if it's the value below, or the raw AZURE_CLIENT_ID value from
-        # above - Jwt's created by azure's oath return the app uri.
-        app-id-uri: 'api://${AZURE_APP_ID}'
+        # above - Jwt's created by azure's oath return the app uri or just
+        # the app id
+        app-id-uri: ${AZURE_APP_ID}
 
 dbMigration:
   runOnStartup: ${RUN_DB_MIGRATION_ON_STARTUP:true}
+
+logging.level.com.microsoft: TRACE
+logging.level.com.azure: TRACE
