--- a/src/integrationTest/resources/application-test.yaml
+++ b/src/integrationTest/resources/application-test.yaml
@@ -2,3 +2,6 @@ spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:postgresql:16:///fact
+
+user:
+  retention-period: 365
