Added testing support API

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,3 +76,5 @@ spring:
 dbMigration:
   runOnStartup: ${RUN_DB_MIGRATION_ON_STARTUP:true}
 
+testingSupport:
+  enableApi: ${TESTING_SUPPORT_ENABLE_API:false}
