--- a/charts/fact-data-api/values.yaml
+++ b/charts/fact-data-api/values.yaml
@@ -22,3 +22,4 @@ java:
     RUN_DB_MIGRATION_ON_STARTUP: false
     AZURE_MANAGED_IDENTITY_ENABLED: true
     AZURE_STORAGE_ACCOUNT_NAME: factsa{{ .Values.global.environment }}
+    TESTING_SUPPORT_ENABLE_API: false
