FACT-2466 Court Controller (#45)
* FACT-2466 work in progress on azure storage setup

* WIP: Push up changes to test working in an env

* Bumping chart version/ fixing aliases

* Update int tests

* Added missed config

* Update suppressions

* Temp coverage

* Checkstyle

* Add default for conn string so MI works

* Fix pipeline deploys

* WIP

* Court photos done

* Feature code all added

* Added some unit tests

* More unit tests

* FACT-2466 fix sonar issue and add int tests

* FACT-2466 clean up and added more tests

* fixed docker compose to work with new vars

* Properly check content type

* 400 for -1

* Testing DB connection in pipeline

* added POST test

* checkstyle change

* Added example test and clean up config

* Clean up further

* Fix checkstyle

* Added allure reports and Jenkins config to store it

* change step

* Steps need env

* Update reportDir

* Updated naming for allure reports

* Clean name for smoke

* Test storing history

* Put back to working

* functional tests for court controller

* Added testing support API

* added sugested edits and changed the types controller tests to reflect same coding style as CourtControllerFunctionalTests

* Checkstyle corrections

* added cleanup to court controller and clear assertions to types controller tests

* checkstyle correction

* Added CourtPhotoControllerFunctionalTests

* added more photo controller test

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>
Co-authored-by: Dan-Marius Bradea <bradeadanmarius@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ plugins {
   id 'uk.gov.hmcts.java' version '0.12.67'
   id 'io.freefair.lombok' version '9.0.0'
   id 'org.flywaydb.flyway' version '11.13.2'
+  id 'io.qameta.allure' version '3.0.1'
 }
 
 application {
@@ -148,6 +149,10 @@ dependencyCheck {
   suppressionFile = 'config/owasp/suppressions.xml'
 }
 
+allure {
+  version = '2.34.1'
+}
+
 repositories {
   mavenLocal()
   mavenCentral()
@@ -175,6 +180,8 @@ dependencies {
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.13.2'
   implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.13.2'
 
+  implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter-storage-blob', version: '6.0.0'
+
   implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-63', version: '3.10.3'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
@@ -187,6 +194,22 @@ dependencies {
   integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.3'
 
   smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.6'
+  functionalTestImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.20.1'
+  functionalTestImplementation group: 'io.qameta.allure', name: 'allure-junit5', version: '2.30.0'
+  functionalTestImplementation group: 'io.qameta.allure', name: 'allure-rest-assured', version: '2.30.0'
+}
+
+tasks.named('test') {
+  systemProperty 'allure.label.parentSuite', 'Unit tests'
+}
+tasks.named('integration') {
+  systemProperty 'allure.label.parentSuite', 'Integration tests'
+}
+tasks.named('smoke') {
+  systemProperty 'allure.label.parentSuite', 'Smoke tests'
+}
+tasks.named('functional') {
+  systemProperty 'allure.label.parentSuite', 'Functional tests'
 }
 
 bootJar {
