--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       - DB_NAME=fact
       - DB_USER=fact
       - DB_PASSWORD=fact
+      - AZURE_TENANT_ID=${AZURE_TENANT_ID}
+      - AZURE_STORAGE_ACCOUNT_NAME=${AZURE_STORAGE_ACCOUNT_NAME}
+      - AZURE_STORAGE_CONNECTION_STRING=${AZURE_STORAGE_CONNECTION_STRING}
+      - TESTING_SUPPORT_ENABLE_API=${TESTING_SUPPORT_ENABLE_API}
   fact-database:
     image: hmctspublic.azurecr.io/imported/postgres:16-alpine
     environment:
