--- a/src/integrationTest/resources/application-test.yaml
+++ b/src/integrationTest/resources/application-test.yaml
@@ -5,3 +5,7 @@ spring:
 
 migration:
   source-base-url: ${FACT_MIGRATION_SOURCE_BASE_URL:http://localhost:8080}
+
+logging:
+  level:
+    uk.gov.hmcts.reform.fact.data.api.migration: DEBUG
