--- a/src/integrationTest/resources/application-test.yaml
+++ b/src/integrationTest/resources/application-test.yaml
@@ -2,3 +2,11 @@ spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:postgresql:16:///fact
+  # prevents some unwanted azure autoconfiguration during integration testing
+  autoconfigure:
+    exclude:
+      - com.azure.spring.cloud.autoconfigure.implementation.context.AzureTokenCredentialAutoConfiguration
+      - com.azure.spring.cloud.autoconfigure.implementation.storage.blob.AzureStorageBlobAutoConfiguration
+      - com.azure.spring.cloud.autoconfigure.implementation.storage.blob.AzureStorageBlobResourceAutoConfiguration
+      - com.azure.spring.cloud.autoconfigure.implementation.storage.fileshare.AzureStorageFileShareResourceAutoConfiguration
+
