--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,6 +65,8 @@ spring:
         blob:
           container-name: photos
           connection-string: ${AZURE_STORAGE_CONNECTION_STRING:}
+    compatibility-verifier:
+      enabled: false
   servlet:
     multipart:
       max-file-size: 2MB
@@ -78,3 +80,7 @@ dbMigration:
 
 testingSupport:
   enableApi: ${TESTING_SUPPORT_ENABLE_API:false}
+
+cath:
+  api:
+    url: ${CATH_API_URL:http://localhost:8080}
