--- a/build.gradle
+++ b/build.gradle
@@ -189,7 +189,7 @@ dependencies {
 
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
 
-//  implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.46.0'
+  implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.46.0'
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
