--- a/build.gradle
+++ b/build.gradle
@@ -188,6 +188,8 @@ dependencies {
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
 
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
+  //Solves CVE-2025-48976
+  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
 
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
