--- a/build.gradle
+++ b/build.gradle
@@ -188,6 +188,11 @@ dependencies {
 
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
 
+  implementation group: 'org.redisson', name: 'redisson-spring-boot-starter', version: '3.52.0'
+  implementation group: 'com.giffing.bucket4j.spring.boot.starter', name: 'bucket4j-spring-boot-starter', version: '0.13.0'
+  // implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.3'
+  implementation group: 'com.github.ben-manes.caffeine', name: 'jcache', version: '3.2.3'
+
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
