--- a/build.gradle
+++ b/build.gradle
@@ -172,6 +172,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.3.0'
 
   implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.14'
 
@@ -187,7 +188,8 @@ dependencies {
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
 
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
-
+  //Solves CVE-2025-48976
+  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
