--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -76,5 +76,11 @@ spring:
 dbMigration:
   runOnStartup: ${RUN_DB_MIGRATION_ON_STARTUP:true}
 
+os:
+  key: ${OS_KEY}
+  url: https://api.os.uk
+  endpoint:
+    postcode-search: /search/places/v1/postcode
+
 testingSupport:
   enableApi: ${TESTING_SUPPORT_ENABLE_API:false}
